Rewrote some cypress tests and updated the /now page

--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -6,13 +6,14 @@ import { formatDate } from "@utils/format-date";
 
 <BaseLayout pageTitle="Now">
   <p>
-    This page is last updated on {formatDate("2025-09-09")} and is based on the <ExternalLink
+    This page is last updated on {formatDate("2025-09-21")} and is based on the <ExternalLink
       href="https://nownownow.com/about">/now idea</ExternalLink
     > to showcase what a person is currently doing in their life.
   </p>
   <h2>Exercising</h2>
   <ul>
-    <li>Currently training for the 10 miles of Ghent with 3 runs per week</li>
+    <li>Ran the 10 miles of Ghent 1:34:27 last week</li>
+    <li>Will start training for a 10k</li>
     <li>
       Trying to combine running with pilates, yoga and some strength &amp;
       conditioning
@@ -20,14 +21,6 @@ import { formatDate } from "@utils/format-date";
   </ul>
   <h2>Programming</h2>
   <ul>
-    <li>
-      This blog in Astro:
-      <ul>
-        <li>Adding pagination to the blogs overview</li>
-        <li>Adding animations</li>
-        <li>Adding Cypress tests to learn more about Cypress</li>
-      </ul>
-    </li>
     <li>
       Solving <a href="coding/rendez-vous-with-cassidoo"
         >Rendez-vous with Cassidoo interview questions</a
@@ -42,19 +35,19 @@ import { formatDate } from "@utils/format-date";
   </ul>
   <h2>Working</h2>
   <ul>
-    <li>On parental leave until end of September</li>
+    <li>Starting work again tomorrow after almost half a year of parental leave</li>
     <li>Working as a frontend consultant at Sopra Steria</li>
   </ul>
   <h2>Learning</h2>
   <ul>
     <li>More about Astro by building this site</li>
-    <li>Deepening my knowledge of French</li>
+    <li>Deepening my knowledge of French with Duolingo and reading Bob &amp; Bobette</li>
     <li>Animations in CSS</li>
   </ul>
   <h2>Gaming</h2>
   <ul>
     <li>Trying to build an efficient city in Cities: Skylines</li>
-    <li>Eagerly awaiting the release of Hades 2</li>
+    <li>Eagerly awaiting the release of Hades 2 (only a couple of days left!)</li>
     <li>Playing a Pathfinder campaign with friends</li>
     <li>Building my biggest Factorio: Space Age factory</li>
   </ul>
@@ -64,7 +57,7 @@ import { formatDate } from "@utils/format-date";
       Watching my beautiful baby boy grow up, together with my amazing wife
     </li>
     <li>
-      Since a week he's having nights where he sleeps for more than 6 hours
+      Enjoying the longer nights of sleep
     </li>
   </ul>
 </BaseLayout>
