--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,20 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import "../styles/global.css";
 import SkipToMainContent from "@components/SkipToMainContent.astro";
+
+type Props = {
+  pageTitle: string;
+  openGraph: {
+    basic: {
+      title: string;
+      type: string;
+      image: string;
+      url: string;
+    };
+  };
+  description: string;
+};
+
 const {
   pageTitle,
   openGraph,
