Fix issues with Astro seeing the pomodoro.vue as a route

--- a/src/pages/coding/pomodoro/index.astro
+++ b/src/pages/coding/pomodoro/index.astro
@@ -1,6 +1,6 @@
 ---
 import Introduction from "@components/Introduction.astro";
-import Pomodoro from "./pomodoro.vue";
+import Pomodoro from "./_pomodoro.vue";
 import BaseLayout from "@layouts/BaseLayout.astro";
 import { createOpenGraph } from "@utils/create-open-graph";
 
