Updated now page

--- a/src/pages/now.astro
+++ b/src/pages/now.astro
@@ -11,37 +11,29 @@ const openGraph = createOpenGraph(pageTitle, "/now");
 
 <BaseLayout pageTitle={pageTitle} description={description} openGraph={openGraph}>
   <p>
-    This page is last updated on {formatDate("2025-09-21")} and is based on the <ExternalLink
+    This page is last updated on {formatDate("2025-12-05")} and is based on the <ExternalLink
       href="https://nownownow.com/about">/now idea</ExternalLink
     > to showcase what a person is currently doing in their life.
   </p>
   <h2>Exercising</h2>
   <ul>
-    <li>Ran the 10 miles of Ghent 1:34:27 last week</li>
-    <li>Will start training for a 10k</li>
+    <li>Training for a 10k</li>
     <li>
-      Trying to combine running with pilates, yoga and some strength &amp;
+      Combining running with pilates, yoga and some strength &amp;
       conditioning
     </li>
   </ul>
   <h2>Programming</h2>
   <ul>
-    <li>
-      Solving <a href="coding/rendez-vous-with-cassidoo"
-        >Rendez-vous with Cassidoo interview questions</a
-      >:
-      <ul>
-        <li>Solving the weekly question</li>
-        <li>Going back to older questions to solve them too</li>
-      </ul>
-    </li>
-    <li>Looking to finalise my Advent of Code puzzles of 2025</li>
-    <li>Looking to backup all my dotfiles</li>
+    <li>Doing this year's Advent of Code puzzles</li>
+    <li>Backing up all my dotfiles</li>
+    <li>Learning Python</li>
   </ul>
   <h2>Working</h2>
   <ul>
-    <li>Starting work again tomorrow after almost half a year of parental leave</li>
-    <li>Working as a frontend consultant at Sopra Steria</li>
+    <li>Back at work after almost half a year of parental leave</li>
+    <li>Working as a consultant at Meemoo</li>
+    <li>Fullstack programming with Vue and Python</li>
   </ul>
   <h2>Learning</h2>
   <ul>
@@ -51,10 +43,10 @@ const openGraph = createOpenGraph(pageTitle, "/now");
   </ul>
   <h2>Gaming</h2>
   <ul>
-    <li>Trying to build an efficient city in Cities: Skylines</li>
-    <li>Eagerly awaiting the release of Hades 2 (only a couple of days left!)</li>
+    <li>Enjoying Hades 2</li>
     <li>Playing a Pathfinder campaign with friends</li>
     <li>Building my biggest Factorio: Space Age factory</li>
+    <li>Exploring the world in Hogwarts Legacy</li>
   </ul>
   <h2>Parenting</h2>
   <ul>
