Fixed some small formatting on lists and the intro text

--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -11,12 +11,13 @@ import profilePicture from "../images/elke.jpg";
     class="picture"
   />
   <span class="introduction">
-    I'm a frontend developer specializing in React, with a background in Vue,
-    Angular, and some fullstack work (NodeJS &amp; C&num;). When I'm not coding,
-    you'll find me running, enjoying music, taking pictures, or playing
-    boardgames and tabletop RPGs like Dungeons&amp;Dragons. These days, my
-    biggest adventure is raising my amazing son with my beautiful wife. On this
-    blog, I'll share my insights on tech, code snippets, hobbies, and more.
+    I'm a fullstack developer specializing in Vue &amp; Python, with a
+    background in React &amp; Angular, and some other backend work (NodeJS &amp;
+    C&num;). When I'm not coding, you'll find me running, enjoying music, taking
+    pictures, or playing boardgames and tabletop RPGs like Dungeons&amp;Dragons.
+    These days, my biggest adventure is raising my amazing son with my beautiful
+    wife. On this blog, I'll share my insights on tech, code snippets, hobbies,
+    and more.
   </span>
 </section>
 
